--- a/MyPage.html
+++ b/MyPage.html
@@ -70,7 +70,7 @@
 
   <header>
     <h1>Your Name</h1>
-    <p>Web Developer | Business Analyst | </p>
+    <p>Web Developer | Business Analyst</p>
   </header>
 
   <section>
@@ -90,23 +90,4 @@
       <ul>
         <li>
           <h3>Company Name</h3>
-          <p class="date">June 20XX - Present</p>
-          <p>Position: Web Developer</p>
-          <p>Description of responsibilities and achievements in this role.</p>
-        </li>
-      </ul>
-    </div>
-
-    <div class="skills">
-      <h2 class="section-title">Skills</h2>
-      <div class="skill">HTML</div>
-      <div class="skill">CSS</div>
-      <div class="skill">JavaScript</div>
-      <div class="skill">React.js</div>
-      <div class="skill">Business Analysis</div>
-      <!-- Add more skills as needed -->
-    </div>
-  </section>
-
-</body>
-</html>
+          <p class="date">June 20XX - P
