--- a/index.html
+++ b/index.html
@@ -1,36 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css"> <!-- Add a separate CSS file for styling -->
-    <title>Your Name - Resume</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Name - Resume</title>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <!-- FontAwesome Icons -->
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <!-- AOS Library -->
+  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(135deg, #f4f4f4, #ddd);
+      color: #333;
+    }
+
+    header {
+      background: linear-gradient(135deg, #6a11cb, #2575fc);
+      color: #fff;
+      padding: 2em 0;
+      text-align: center;
+    }
+
+    section {
+      margin: 2em auto;
+      max-width: 800px;
+      padding: 1em;
+    }
+
+    h1, h2 {
+      color: #333;
+    }
+
+    .section-title {
+      font-size: 1.5em;
+      border-bottom: 2px solid #333;
+      padding-bottom: 0.5em;
+      margin-bottom: 1em;
+    }
+
+    .card {
+      background-color: #fff;
+      padding: 1.5em;
+      margin-bottom: 1.5em;
+      border-radius: 10px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    ul li {
+      margin-bottom: 1em;
+    }
+
+    .skills {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+
+    .skill {
+      background-color: #333;
+      color: #fff;
+      padding: 0.5em 1em;
+      margin: 0.5em;
+      border-radius: 5px;
+      transition: transform 0.3s ease, background-color 0.3s ease;
+    }
+
+    .skill:hover {
+      background-color: #2575fc;
+      transform: scale(1.1);
+    }
+
+    .skill-bar {
+      background-color: #ddd;
+      border-radius: 10px;
+      overflow: hidden;
+      margin-bottom: 10px;
+    }
+
+    .progress {
+      background-color: #2575fc;
+      height: 10px;
+      border-radius: 10px;
+    }
+
+    #dark-mode-toggle {
+      background-color: #333;
+      color: #fff;
+      border: none;
+      padding: 0.5em 1em;
+      border-radius: 5px;
+      cursor: pointer;
+      position: fixed;
+      top: 10px;
+      right: 10px;
+    }
+
+    .dark-mode {
+      background-color: #121212;
+      color: #fff;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>André Lopes</h1>
-        <p>Contact: <a href="mailto:lopesfreetotalk@gmail.com">lopesfreetotalk@gmail.com</a></p>
-        
-    </header>
+  <button id="dark-mode-toggle">Toggle Dark Mode</button>
+  <header>
+    <h1>Your Name</h1>
+    <p>Web Developer | Business Analyst</p>
+  </header>
 
-    <section id="education">
-        <h2>Education</h2>
-        <!-- Add your education details here -->
+  <section>
+    <div class="education card" data-aos="fade-right">
+      <h2 class="section-title">Education</h2>
+      <ul>
+        <li>
+          <h3>University Name</h3>
+          <p class="date">Graduated: May 20XX</p>
+          <p>Bachelor of Science in Computer Science</p>
+        </li>
+      </ul>
+    </div>
 
-    </section>
+    <div class="experience card" data-aos="fade-left">
+      <h2 class="section-title">Work Experience</h2>
+      <ul>
+        <li>
+          <h3>Company Name</h3>
+          <p class="date">June 20XX - Present</p>
+          <p>Describe your responsibilities and achievements here.</p>
+        </li>
+      </ul>
+    </div>
 
-    <section id="experience">
-        <h2>Work Experience</h2>
-        <!-- Add your work experience details here -->
-    </section>
+    <div class="skills card" data-aos="zoom-in">
+      <h2 class="section-title">Skills</h2>
+      <div class="skill-bar">
+        <div class="progress" style="width: 75%;"></div>
+      </div>
+      <span class="skill">JavaScript</span>
+      <span class="skill">HTML</span>
+      <span class="skill">CSS</span>
+      <span class="skill">React</span>
+      <span class="skill">Node.js</span>
+    </div>
+  </section>
 
-    <section id="skills">
-        <h2>Skills</h2>
-        <!-- Add your skills here -->
-    </section>
+  <form id="contact-form" class="card" data-aos="fade-up">
+    <h2 class="section-title">Contact Me</h2>
+    <input type="text" placeholder="Your Name" required style="width: 100%; padding: 10px; margin-bottom: 10px;">
+    <input type="email" placeholder="Your Email" required style="width: 100%; padding: 10px; margin-bottom: 10px;">
+    <textarea placeholder="Your Message" required style="width: 100%; padding: 10px; margin-bottom: 10px;"></textarea>
+    <button type="submit" style="background-color: #333; color: #fff; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">Send</button>
+  </form>
 
-    <footer>
-        <p>For more details, visit my <a href="https://github.com/AnmLopes">GitHub profile</a>.</p>
-    </footer>
+  <!-- AOS Library -->
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+  <script>
+    AOS.init();
+
+    const toggle = document.getElementById('dark-mode-toggle');
+    toggle.addEventListener('click', () => {
+      document.body.classList.toggle('dark-mode');
+    });
+
+    document.getElementById('contact-form').addEventListener('submit', (e) => {
+      e.preventDefault();
+      alert('Thank you for your message!');
+    });
+  </script>
 </body>
 </html>
