--- a/MyPage.html
+++ b/MyPage.html
@@ -115,8 +115,8 @@
 <body>
   <button id="dark-mode-toggle">Toggle Dark Mode</button>
   <header>
-    <h1>Your Name</h1>
-    <p>Web Developer | Business Analyst</p>
+    <h1>André Lopes</h1>
+    <p>Web Developer | Business Analyst | Data Science</p>
   </header>
 
   <section>
