--- a/MyPage.html
+++ b/MyPage.html
@@ -10,6 +10,8 @@
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <!-- AOS Library -->
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+  <!-- EmailJS Library -->
+  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
   <style>
     body {
       font-family: 'Roboto', sans-serif;
@@ -115,8 +117,8 @@
 <body>
   <button id="dark-mode-toggle">Toggle Dark Mode</button>
   <header>
-    <h1>André Lopes</h1>
-    <p>Web Developer | Business Analyst | Data Science</p>
+    <h1>Your Name</h1>
+    <p>Web Developer | Business Analyst</p>
   </header>
 
   <section>
@@ -157,25 +159,40 @@
 
   <form id="contact-form" class="card" data-aos="fade-up">
     <h2 class="section-title">Contact Me</h2>
-    <input type="text" placeholder="Your Name" required style="width: 100%; padding: 10px; margin-bottom: 10px;">
-    <input type="email" placeholder="Your Email" required style="width: 100%; padding: 10px; margin-bottom: 10px;">
-    <textarea placeholder="Your Message" required style="width: 100%; padding: 10px; margin-bottom: 10px;"></textarea>
+    <input type="text" name="from_name" placeholder="Your Name" required style="width: 100%; padding: 10px; margin-bottom: 10px;">
+    <input type="email" name="from_email" placeholder="Your Email" required style="width: 100%; padding: 10px; margin-bottom: 10px;">
+    <textarea name="message" placeholder="Your Message" required style="width: 100%; padding: 10px; margin-bottom: 10px;"></textarea>
     <button type="submit" style="background-color: #333; color: #fff; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">Send</button>
   </form>
 
   <!-- AOS Library -->
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
   <script>
+    // Initialize AOS Library
     AOS.init();
 
+    // Dark Mode Toggle
     const toggle = document.getElementById('dark-mode-toggle');
     toggle.addEventListener('click', () => {
       document.body.classList.toggle('dark-mode');
     });
 
-    document.getElementById('contact-form').addEventListener('submit', (e) => {
+    // Initialize EmailJS
+    emailjs.init("j8Ryn8x7HQhIHSVYn");
+
+    // Handle Form Submission
+    document.getElementById('contact-form').addEventListener('submit', function (e) {
       e.preventDefault();
-      alert('Thank you for your message!');
+
+      emailjs.sendForm('service_l92h0px', 'template_rd4je38', this)
+        .then(() => {
+          alert('Message sent successfully!');
+          this.reset(); // Clear form
+        })
+        .catch((error) => {
+          console.error('EmailJS Error:', error);
+          alert('Failed to send message. Please try again.');
+        });
     });
   </script>
 </body>
