--- a/MyPage.html
+++ b/MyPage.html
@@ -185,7 +185,7 @@
     formData.append("to_name", "Recipient Name");
 
     // Send form data through EmailJS
-    emailjs.sendForm('service_l92h0px', 'template_rd4je38', this)
+    emailjs.sendForm('service_l92h0px', 'template_qg7jpl7', this)
       .then(() => {
         alert('Message sent successfully!');
         this.reset(); // Clear form
