--- a/MyPage.html
+++ b/MyPage.html
@@ -152,7 +152,7 @@
 <body>
   <button id="dark-mode-toggle">Toggle Dark Mode</button>
   <header>
-    <h1>Iris Lopes Morgado</h1>
+    <h1>André Lopes</h1>
     <p>Web Developer | Business Analyst</p>
   </header>
 
