--- a/MyPage.html
+++ b/MyPage.html
@@ -184,6 +184,63 @@
       <h2 class="section-title">Work Experience</h2>
       <ul>
         <li>
+          <h3>Company Name</h3>
+          <p class="date">June 20XX - Present</p>
+          <p>Describe your responsibilities and achievements here.</p>
+        </li>
+      </ul>
+    </div>
+  </section>
+
+  <section id="skills">
+    <div class="skills card" data-aos="zoom-in">
+      <h2 class="section-title">Technical Skills</h2>
+      <ul>
+        <li>
+          <h3>Programming</h3>
+          <p>Sólida experiência em C, Java, OCaml, JavaScript, e Bash para desenvolvimento de software eficiente e otimizado. Profundo conhecimento em Programação Orientada a Objetos (POO) e paradigmas funcionais.</p>
+        </li>
+        <li>
+          <h3>Algorithms & Data Structures</h3>
+          <p>Proficiente na implementação de algoritmos de busca, ordenamento, programação dinâmica, e estruturas de dados como listas, árvores, grafos, pilhas e tabelas de dispersão.</p>
+        </li>
+        <li>
+          <h3>Operating Systems & Networking</h3>
+          <p>Familiaridade avançada com gerenciamento de processos, memória virtual, concorrência, e comunicação interprocessos. Experiência prática com sockets, protocolos TCP/IP, roteamento e construção de aplicações distribuídas.</p>
+        </li>
+        <li>
+          <h3>Databases</h3>
+          <p>Forte conhecimento em modelagem relacional e entidade-relacionamento (ER), além de experiência em SQL para criação de esquemas, consultas complexas, procedimentos armazenados e manipulação de dados. Implementação de normalização e integridade referencial.</p>
+        </li>
+        <li>
+          <h3>Artificial Intelligence</h3>
+          <p>Experiência com algoritmos de busca (A*, BFS, DFS), lógica proposicional e de predicados, programação em lógica, planejamento automático e aprendizagem de máquinas. Conhecimentos em redes neurais e redes bayesianas para análise preditiva e diagnóstico.</p>
+        </li>
+        <li>
+          <h3>Computer Graphics</h3>
+          <p>Conhecimento em modelagem gráfica 3D utilizando WebGL e OpenGL. Desenvolvimento de aplicações gráficas interativas e interfaces de usuário utilizando modelos de sombreamento e rasterização de polígonos.</p>
+        </li>
+        <li>
+          <h3>Development Technologies</h3>
+          <p>Proficiência em controle de versões com Git, Docker para conteinerização, e uso de plataformas web como Node.js e React para criação de aplicações modernas e escaláveis.</p>
+        </li>
+        <li>
+          <h3>Mathematics & Computational Logic</h3>
+          <p>Aplicação de lógica formal e teoria de conjuntos para resolução de problemas complexos em áreas como computação teórica, modelagem de sistemas e raciocínio probabilístico.</p>
+        </li>
+        <li>
+          <h3>Distributed Applications Development</h3>
+          <p>Compreensão de arquiteturas de redes, qualidade de serviço (QoS), difusão de informações, endereçamento IP e protocolos como HTTP, com foco em desempenho e escalabilidade.</p>
+        </li>
+      </ul>
+    </div>
+  </section>
+
+  <section id="experience">
+    <div class="experience card" data-aos="fade-left">
+      <h2 class="section-title">Work Experience</h2>
+      <ul>
+        <li>
           <h3>Tech Solutions Inc.</h3>
           <p class="date">June 20XX - Present</p>
           <p>Software Developer – Developed web applications, integrated APIs, and contributed to cloud solutions for clients.</p>
